# ebony.md

./: .gitignore  LICENSE  QUICKSTART.md  README.md  STATUS.md  SUCCESS.md  cleanup.sh  package.json  pnpm-lock.yaml  repomix-output.md  repomix.config.json  resources.md  start-ebony.sh  vite.config.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  graph.rs  main.rs  plugins.rs  search.rs  vault.rs
src-tauri/src/commands/: fs.rs
src/components/: CommandPalette.tsx  FileTree.tsx  GraphView.tsx  MarkdownEditor.tsx  Onboarding.tsx
src/features/graph/: GraphView.tsx
src/features/notes/: noteApi.ts  noteTypes.ts
src/features/search/: useNoteSearch.ts
src/features/settings/: SettingsPanel.tsx
src/hooks/: useDebounce.ts  useNoteOperations.ts
src/lib/: markdown.ts  tauri.ts
src/stores/: settingsStore.ts  vaultStore.ts
src/types/: index.ts
tauri-plugin-sample-plugin/: Cargo.toml  README.md  package.json
tauri-plugin-sample-plugin/examples/tauri-app/: package.json
tauri-plugin-sample-plugin/examples/tauri-app/src/: App.svelte
tauri-plugin-sample-plugin/examples/tauri-app/src-tauri/: Cargo.toml
tauri-plugin-sample-plugin/examples/tauri-app/src-tauri/capabilities/: default.json
tauri-plugin-sample-plugin/examples/tauri-app/src-tauri/src/: lib.rs
tauri-plugin-sample-plugin/guest-js/: index.ts
tauri-plugin-sample-plugin/src/: commands.rs  desktop.rs  lib.rs  mobile.rs
